# singlecase

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py
singlecase/: __init__.py
singlecase/data/: __init__.py
singlecase/effectsize/: __init__.py
singlecase/permtest/: __init__.py
singlecase/plotting/: __init__.py
singlecase/table/: __init__.py
test/permtest/: test_permutation_test.py
