[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
include = ["singlecase", "singlecase.*"]

[project]
name = "singlecase"
version = "0.1.0"
description = "Work with data from single case study designs"
readme = "README.md"
authors = [{ name = "Casper Wilstrup", email = "casper.wilstrup@abzu.ai" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
keywords = ["single case", "permutation test", "pnd", "nap", "effect size"]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/wilstrup/singlecase"
