[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
include = ["singlecase", "singlecase.*"]

[project]
name = "singlecase"
version = "0.2.1"
description = "A tool for single-case design data managment, statistical analysis and visualization."
readme = "README.md"
authors = [{ name = "Casper Wilstrup", email = "casper.wilstrup@abzu.ai" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent"
]
keywords = ["single case", "permutation test", "pnd", "nap", "effect size", "non-overlapping", "statistical analysis", "research"]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["black", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/wilstrup/singlecase"
